--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -1,14 +1,14 @@
 {% extends "layout.html" %}
 
 {% block content %}
-This site is in Testing. For questions or issue contact Greg Chamblin at 952-912-9215.
+This site is in Testing. For questions or issue contact Greg Chamblin at 952-912-9215.</br>
 
-<h2><a href = {{url_for('search')}}>Submit Deliverables</a></h2>
+<h2><a href = {{url_for('checkinoutpage')}}>Check-In/Out</a></h2>
 
 <h2><a href = {{url_for('docs')}}>View Documents</a></h2>
 
 <h2><a href = {{url_for('issues')}}>Create Issue</a></h2>
 
-<h2><a href = {{url_for('checkinoutpage')}}>Check-In/Out</a></h2>
+<h2><a href = {{url_for('search')}}>Submit Deliverables</a></h2>
 
 {% endblock %}
