--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -2,14 +2,15 @@
 <html>
 <head>
     <title>TDX Tech - LBI Tech Portal</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static',filename='css/main.css')}}"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
 </head>
 <body>
 <div class="container-fluid text-center top-container">
     <img src="{{ url_for('static',filename='images/tdx-56-logo-rgb-tight.png')}}">
 </div>
-<div class="container">
+<div class="container-md">
     {% block content %}
     {% endblock %}
 </div>
