--- a/application/static/css/main.css
+++ b/application/static/css/main.css
@@ -1,57 +1,33 @@
-* {
+/* * {
     box-sizing: border-box;
 }
 
 *:before,
 *:after {
     box-sizing: border-box;
-}
+} */
 
-html,
+/* html,
 body {
     font-family: Arial, Helvetica, sans-serif;
     height: 100%;
     position: relative;
     margin:0px;
-}
+} */
 
 header {
     text-align: center;
 }
 
-li {
-    display: inline;
-    padding: 5px;
-}
-
-a {
-    text-decoration: none;
-    color: blue;
-}
-
-a:hover { color : red;}
-
-hr {
-    width: 100%;
-    height:2px;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: darkblue;
-    border: 0 none;
-}
-
 input[type=text], input[type=password], input[type=select] {
     width: 33%;
-    padding: 0px;
-    margin: 5px 0 22px 0;
-    display: inline-block;
     border: 1px;
-    background: #f1f1f1;
+    background: #eee;
 }
 
 input[type=text]:focus, input[type=password]:focus, input[type=select]:focus {
-    background-color: #ddd;
-    outline: none;
+    background-color: #aaa;
+    outline: 1px solid #000;
 }
 
 .top-container {
@@ -62,8 +38,8 @@ input[type=text]:focus, input[type=password]:focus, input[type=select]:focus {
 .bottom-menu {
     position:fixed;
     right:0px;
-    bottom:1px;
-    border:1px solid #73AD21;
+    bottom:0px;
+    border:2px solid #73AD21;
     width: 75px;
     font-size: medium;
     line-height:46px;
