--- a/application/templates/issues.html
+++ b/application/templates/issues.html
@@ -5,15 +5,15 @@
 <form method="POST" enctype="multipart/form-data">
 <div class="row row-cols-2 offset-sm-1">
     <div class="col">{{ form.storebrand.label }}:</div>
-    <div class="col">{{ form.storebrand() }}</div>
+    <div class="col-sm-4">{{ form.storebrand() }}</div>
     <div class="col">{{ form.storenumber.label }}:</div>
-    <div class="col">{{ form.storenumber() }}</div>
+    <div class="col-sm-4">{{ form.storenumber() }}</div>
     <div class="col">{{ form.devaffected.label }}:</div>
-    <div class="col">{{ form.devaffected() }}</div>
+    <div class="col-sm-4">{{ form.devaffected() }}</div>
     <div class="col">{{ form.issuedesc.label }}:</div>
-    <div class="col">{{ form.issuedesc() }}</div>
+    <div class="col-sm-4">{{ form.issuedesc() }}</div>
     <div class="col">{{ form.tech.label }}:</div>
-    <div class="col">{{ form.tech() }}</div>
+    <div class="col-sm-4">{{ form.tech() }}</div>
     <div class="col offset-6">{{ form.image }}</div>
     <div class="col">{{ form.upload }}</div>
 </div>
